# riscy-binutils

./: CMakeLists.txt  README.md  Taskfile.yml
src/: main.cpp
tst/: basictest.cpp
